--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h3 class="text-center">Search for Weather:</h3>
+        <h3 class="text-center my-4">Search for Weather:</h3>
         <form [formGroup]="weatherSearchForm"  (ngSubmit)="sendToAPIXU(weatherSearchForm.value)">
             <div class="form-group">
               <input
@@ -18,6 +18,6 @@
             </div>
            </form> 
     </div>
-      <div class="col-md-6"><h3 class="text-center">Weather Details:</h3></div>
+      <div class="col-md-6"><h3 class="text-center my-4">Weather Details:</h3></div>
     </div>
   </div>
